# H264_Compression

./: .gitignore  CMakeLists.txt  README.md
include/: encode.h
lib/FFmpeg/: CMakeLists.txt
src/: main.c  main.cpp
